--- a/docker/lavis/_torch/Dockerfile
+++ b/docker/lavis/_torch/Dockerfile
@@ -3,6 +3,6 @@ FROM pytorch/pytorch:latest
 RUN apt update
 RUN apt install -y build-essential
 
-RUN pip install websockets salesforce-lavis
+RUN pip install fastapi[all] websockets salesforce-lavis
 
 WORKDIR /opt/LAVIS_APP
