--- a/browser-controller-min/.gitignore
+++ b/browser-controller-min/.gitignore
@@ -23,6 +23,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
 .env*.local
@@ -34,6 +35,10 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-#
-.env
-.credentials
+.log
+user.config.js
+stores/*.json
+templates/*.json.tpl
+templates/*.script.tpl
+!templates/main.json.tpl
+!templates/main.script.tpl
