--- a/prompter/package.json
+++ b/prompter/package.json
@@ -14,10 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/nextjs": "^9.2.0",
+    "@google-cloud/text-to-speech": "^4.2.2",
     "autoprefixer": "^10.4.14",
     "dotenv": "^16.0.3",
     "fastify": "^4.17.0",
     "got": "^12.6.0",
+    "lodash.random": "^3.2.0",
     "lodash.sample": "^4.2.1",
     "lodash.samplesize": "^4.2.0",
     "next": "^13.4.2",
